@@ -5,6 +5,7 @@
 #   - Username
 #   - PLAINTEXT PASSWORD (which must not have double-colon in it!)
 #   - Enabled attributes (tokens, space separated)
+#   - Addresses in brackets plus netmask widths:  [1.2.3.4]/32
 #
 # Default-account for 'mailq' is 'nobody' with password 'nobody'.
 # Third field is at the moment a WORK IN PROGRESS!
@@ -21,6 +22,6 @@
 #	ETRN	"START THREAD channel host"
 #	KILL	"KILL THREAD channel host", "KILL MSG spoolid"
 #
-nobody:nobody:SNMP ETRN
-#watcher:zzzzz:SNMP QQ TT ETRN
-#root:zzzzzzz:ALL
+nobody:nobody:SNMP ETRN:[0.0.0.0]/0
+#watcher:zzzzz:SNMP QQ TT ETRN:[127.0.0.0]/8 [192.168.0.1]/32
+#root:zzzzzzz:ALL:[127.0.0.0]/8 [192.168.0.2]/32
